# nap

./: .gitignore  CMakeLists.txt  README.md  nap_config.sh  package.xml
launch/: ar_demo.launch  bag_cooked.launch  blackbox4_bag.launch  dbow.launch  gps_plotter.launch  nap_cooked.launch  only_nap_tx2.launch  point_gray.launch  sensor_suite.launch  vins.launch  vins_n_nap.launch
msg/: NapMsg.msg  NapNodeMsg.msg
resources/: 1.obj.worldpose  chair.obj.worldpose
rviz/: euroc.rviz  my_ar.rviz  my_pose_graph.rviz  nuc_viz.rviz  toy_slam.rivz.rviz  viz_cmap.rviz  viz_gps.rviz
scripts/: CartWheelFlow.py  FeatureFactory.py  GeometricVerification.py  PlaceRecognitionNetvlad.py  README.md  colocation_viz.py  colocation_viz2.py  gps2odometry.py  graph_analysis.py  im_generator_kitti.py  im_generator_malaga.py  nap_daisy_bf.py  nap_debug_visualize_all_prev_cmap.py  nap_geom_node.py  nap_graph_modelling.py  nap_robustdaisy_bf.py  nap_time_node.py  test_daisy_3way_matching.py  test_daisy_guided2.py  test_daisy_improve_dec2017.py  test_dbow_naive_loopthru_dec2017.py  test_faiss.py  test_faiss2.py  test_feature_factory.py  test_inspect_1loop_candidate.py  test_inspect_loop_candidates.py  test_netvlad_cluster_assgn.py  test_netvlad_standalone.py  test_pits_netvlad_vec.py  test_segmentation2.py  test_segmentation3.py  test_tsne.py  test_what_network_thinks_as_important.py
scripts/DaisyMeld/: daisymeld.py
scripts_multiproc/: CartWheelFlow.py  ColorLUT.py  DaisyFlow.py  DenseFeatureTracks.py  FeatureFactory.py  GeometricVerification.py  ImageReceiver.py  Plot2Mat.py  association_map.py  nap_multiproc.py  nap_multiproc2.py  test_Plot2Mat.py  test_node.py  test_node_mutiproc.py  test_node_opt.py
scripts_multiproc/DaisyMeld/: daisymeld.py
scripts_multiproc/tf_queues/: medium_queues0.py  medium_queues1.py
src/: ColorLUT.cpp  ColorLUT.h  Corvus.cpp  Corvus.h  DataManager.h  DataManager_AR.cpp  DataManager_ceres.cpp  DataManager_core.cpp  DataManager_looppose_computation.cpp  DataManager_rviz_visualization.cpp  DataManager_utils.cpp  Edge.h  EdgeManager.cpp  EdgeManager.h  Feature3dInvertedIndex.cpp  Feature3dInvertedIndex.h  LocalBundle.cpp  LocalBundle.h  MeshObject.cpp  MeshObject.h  Node.cpp  Node.h  PinholeCamera.cpp  PinholeCamera.h  SceneRenderer.cpp  SceneRenderer.h  ceres_vertigo.cpp  dbow3_naive.cpp  dbow3_test.cpp  interactive_marker_server.cpp  pose_graph_opt_node.cpp  test_load_AR_debug_info.cpp
src/DBoW3/: README.md
src/utils/: PoseManipUtils.h  RosMarkerUtils.cpp  RosMarkerUtils.h
tf.models/D/: model-8000.index
